Split Package HERE
Split Package works When you run EXEC:EXEC, dont run clean:install as well